--- a/Test-EurekaServer/src/main/resources/application1122.properties
+++ b/Test-EurekaServer/src/main/resources/application1122.properties
@@ -7,3 +7,5 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 #Eureka\u5ba2\u6237\u7aef \u94fe\u63a5\u5730\u5740
 eureka.client.serviceUrl.defaultZone=http://localhost:${server.port}${server.servlet.context-path}/eureka
+#¿ªÆô½¡¿µ¼ì²é
+eureka.client.healthcheck.enable=true
